--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,40 +9,41 @@ on:
     pull_request:
       - master
 
-# ジョブの定義
-jobs:
-  build:
-    # 実行するインスタンス
-    runs-on: ubuntu-latest
+        # ジョブの定義
+    jobs:
+      build:
+        # 実行するインスタンス
+        runs-on: ubuntu-latest
 
-    # nodeのバージョン一覧
-    strategy:
-      matrix:
-        node-version: ['12.x']
+        # nodeのバージョン一覧
+        strategy:
+          matrix:
+            node: [ '12', '14', '16' ]
 
-    # 各ステップの実行
-    steps:
+            # 各ステップの実行
+            steps:
 
-    # チェックアウト
-    - uses: actions/checkout@v1
+              # チェックアウト
+              - name: Checkout branch
+                uses: actions/checkout@v2
 
-    # 使用するnodeのバージョンを指定
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+                # 使用するnodeのバージョンを指定
+              - name: Setup node
+                uses: actions/setup-node@v2
+                with:
+                  node-version: ${{ matrix.node }}
 
-    # パッケージのインストールとアプリのビルド
-    - name: install and build
-      run: |
-        npm ci
-        npm run build
-      env:
-        CI: true
+                  # パッケージのインストールとアプリのビルド
+              - name: install and build
+                run: |
+                  npm ci
+                  npm run build
+                env:
+                  CI: true
 
-    # gh-pagesを使って公開
-    - name: deploy
-        uses: peaceiris/actions-gh-pages@v2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+                  # gh-pagesを使って公開
+              - name: deploy
+                uses: peaceiris/actions-gh-pages@v3
+                with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./build
