--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,45 +4,47 @@ name: Release GitHub Page
 # 起動のタイミング
 on:
   push:
-    - master
-  pull_request:
-    - master
+    branches:
+      - master
+    pull_request:
+      branches:
+        - master
 
-      # ジョブの定義
-  jobs:
-    build:
-      # 実行するインスタンス
-      runs-on: ubuntu-latest
+        # ジョブの定義
+    jobs:
+      build:
+        # 実行するインスタンス
+        runs-on: ubuntu-latest
 
-      # nodeのバージョン一覧
-      strategy:
-        matrix:
-          node: [ '12', '14', '16' ]
+        # nodeのバージョン一覧
+        strategy:
+          matrix:
+            node: [ '12', '14', '16' ]
 
-          # 各ステップの実行
-          steps:
+            # 各ステップの実行
+        steps:
 
-            # チェックアウト
-            - name: Checkout branch
-              uses: actions/checkout@v2
+          # チェックアウト
+          - name: Checkout branch
+            uses: actions/checkout@v2
 
-              # 使用するnodeのバージョンを指定
-            - name: Setup node
-              uses: actions/setup-node@v2
-              with:
-                node-version: ${{ matrix.node }}
+            # 使用するnodeのバージョンを指定
+          - name: Setup node
+            uses: actions/setup-node@v2
+            with:
+              node-version: ${{ matrix.node }}
 
-                # パッケージのインストールとアプリのビルド
-            - name: install and build
-              run: |
-                npm ci
-                npm run build
-              env:
-                CI: true
+              # パッケージのインストールとアプリのビルド
+          - name: install and build
+            run: |
+              npm ci
+              npm run build
+            env:
+              CI: true
 
-                # gh-pagesを使って公開
-            - name: deploy
-              uses: peaceiris/actions-gh-pages@v3
-              with:
-                github_token: ${{ secrets.GITHUB_TOKEN }}
-                publish_dir: ./build
+              # gh-pagesを使って公開
+          - name: deploy
+            uses: peaceiris/actions-gh-pages@v3
+            with:
+              github_token: ${{ secrets.GITHUB_TOKEN }}
+              publish_dir: ./build
