--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,5 @@
-# ワークフローの名前
 name: Release GitHub Page
 
-# 起動のタイミング
 on:
   push:
     branches:
@@ -10,31 +8,25 @@ on:
       branches:
         - master
 
-        # ジョブの定義
     jobs:
       build:
-        # 実行するインスタンス
+        name: Release GitHub Page
         runs-on: ubuntu-latest
 
-        # nodeのバージョン一覧
         strategy:
           matrix:
             node: [ '12', '14', '16' ]
 
-            # 各ステップの実行
         steps:
 
-          # チェックアウト
           - name: Checkout branch
             uses: actions/checkout@v2
 
-            # 使用するnodeのバージョンを指定
           - name: Setup node
             uses: actions/setup-node@v2
             with:
               node-version: ${{ matrix.node }}
 
-              # パッケージのインストールとアプリのビルド
           - name: install and build
             run: |
               npm ci
@@ -42,7 +34,6 @@ on:
             env:
               CI: true
 
-              # gh-pagesを使って公開
           - name: deploy
             uses: peaceiris/actions-gh-pages@v3
             with:
